Project Service completed